--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@
 </head>
 <body>
   <header>
-    <div>
-      <div>Header Logo</div>
+    <div class="header__top">
+      <div class="header__logo">Header Logo</div>
       <div>
         <a href="#">header link one</a>
         <a href="#">header link two</a>
         <a href="#">header link three</a>
       </div>
     </div>
-    <div>
-      <div>
+    <div class="header__bottom">
+      <div class="header__left-container">
         <h1>
           This website is awesome
         </h1>
-        <div>
+        <div class="header__subtext">
           This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
         </div>
-        <button>
+        <button class="header__sign-up-button">
           Sign up
         </button>
       </div>
 
-      <div>
+      <div class="header__right-container">
         this is a placeholder image
         <!--possibly require another div-->
       </div>
