--- a/index.html
+++ b/index.html
@@ -31,52 +31,72 @@
 
       <div class="header__right-container">
         this is a placeholder image
-        <!--possibly require another div-->
       </div>
     </div>
   </header>
 
   <main>
-    <div>
+    <div class="main__top">
       <h2>Some random information.</h2>
-      <div>
-        <div>
-          <div></div>
-          <div>text</div>
+      <div class="main__top-container">
+        <div class="main__subtext-container">
+          <div class="subtext-container__box"></div>
+          <div>
+            this is some subtext under an illustration or image
+          </div>
         </div>
-        <div>
-          <div></div>
-          <div>text</div>
+        <div class="main__subtext-container">
+          <div class="subtext-container__box"></div>
+          <div>
+            this is some subtext under an illustration or image
+          </div>
         </div>
-        <div>
-          <div></div>
-          <div>text</div>
+        <div class="main__subtext-container">
+          <div class="subtext-container__box"></div>
+          <div>
+            this is some subtext under an illustration or image
+          </div>
         </div>
-        <div>
-          <div></div>
-          <div>text</div>
+        <div class="main__subtext-container">
+          <div class="subtext-container__box"></div>
+          <div>
+            this is some subtext under an illustration or image
+          </div>
         </div>
       </div>
     </div>
 
-    <div>
-      <div>
-        This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice. <span>-Thor, God of Thunder</span>
+    <div class="main__middle">
+      <div class="main__quote-container">
+        <div class="quote-container">
+          This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+        </div>
+        <div class="quote-author">
+          -Thor, God of Thunder
+        </div>
       </div>
     </div>
 
-    <div>
-      <div>
-        <div>Call to action! It's time!</div>
-        <div>Sign up for our product by clicking that button right over there!</div>
+    <div class="main__bottom">
+      <div class="main__call-to-action">
+        <div class="call-to-action__top">
+          <div class="call-to-action__title">
+            Call to action! It's time!
+          </div>
+          <div class="call-to-action__sign-up">
+            Sign up for our product by clicking that button right over there!
+          </div>
+        </div>
+        <button>
+          Sign up
+        </button>
       </div>
       
-      <button>Sign up</button>
+      
     </div>
   </main>
   <footer>
     Copyright
-    <!--Possibly need a div for Copyright content-->
   </footer>
 </body>
 </html>
